cleaned up stying - phrasing - and squashed victory condition bug

--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ h3{
   letter-spacing: 3px;
   font-size: 10px;
   width: 100%;
+  text-align: left;
 }
 .logTitle{
   font-size: 18px;
